--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 			<li><a href="https://docs.google.com/document/d/1LLwahsND02Eq8cvTe8F5yu_bR2BDa-MiXet3x9otoQg/edit?usp=sharing" target="_blank">Resume</a></li>
 				
 		<li class="dropdown">
-		<a href="../projects.html" class="dropbtn open">Senior Projects</a>
+		<a href="projects.html" class="dropbtn open">Senior Projects</a>
 		<div class="dropdown-content">
 			<a href="https://0664bcac-329e-4d71-baae-519377dee319-00-9fxt56k33t63.worf.repl.co/" target="_blank"> Peer Hire-Me Page </a>
 				<a href="https://prinlim.github.io/J-Query_Adventure_Game/" target="_blank">jQuery Adventure Game</a>
