--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		<li class="dropdown">
 		<a href="projects.html" class="dropbtn">Senior Projects</a>
 		<div class="dropdown-content">
-			<a href="https://0664bcac-329e-4d71-baae-519377dee319-00-9fxt56k33t63.worf.repl.co/" target="_blank"> Peer Hire-Me Page </a>
+			<a href="https://prinlim.github.io/Hire-Me-Project-1/" target="_blank"> Peer Hire-Me Page </a>
 				<a href="https://prinlim.github.io/J-Query_Adventure_Game/" target="_blank">jQuery Adventure Game</a>
-			<a href="https://b52d3f32-9211-4f0c-aff6-96d618d40fe5-00-2hpuq4y4izpog.riker.repl.co/" target="_blank">Fanpage Website</a>
-			<a href="https://5d97e57b-d04a-4943-a940-edbf983e521c-00-2j6ab356c4uja.worf.replit.dev/" target="_blank">Character Quiz</a>
+			<a href="https://prinlim.github.io/Unit-4-Project-Social-Media-Page-PRINCESS-ALECK1/" target="_blank">Fanpage Website</a>
+			<a href="https://prinlim.github.io/Character-Quiz-PRINCESS-ALECK1/" target="_blank">Character Quiz</a>
 			<a href="https://prinlim.github.io/Photo-Gallery/" target="_blank">Photo Gallery</a>
 			<a href="https://tangible-trusted-tornado.glitch.me/index.html" target="_blank">Access Advocates</a>
 		</div>
