--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,13 @@
 			<figcaption> <a href="https://tangible-trusted-tornado.glitch.me/index.html" target="_blank">Social Action Movement: Access Advocates </a></figcaption>
 			<p> Along with my team and I, the project had asked to focus on a current social issue prolonging in the world. As young women in this country and society, we chose reproductive rights and how to educate others on the topic. Specifically, the court case that legalized abortion in America, Roe v. Wade, that had recently been overturned. Our goal was to spread awareness and ways to help for the cause.     </p>
 		</div>
+
+		<div class="cols">
+
+			<img class="parry" src="#">
+			<figcaption> <a href="https://edison-remake.glitch.me/index.html" target="_blank">Edison's Story: Website Remake</a></figcaption>
+			<p> Summary</p>
+		</div>
 	</div>
 </body>
 
