--- a/resumes.html
+++ b/resumes.html
@@ -2,23 +2,23 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>replit</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  
+
 
 
 <div class="topnav">
 		<ul>
-			<li class="open"><a href="index.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="#">About Me</a> </li>
-			<li><a href="resumes.html">Resume</a></li>
-				
+			<li class="open"><a href="resumes.html">Resume</a></li>
+
 			<li class="dropdown">
 				<a href="projects.html" class="dropbtn">Senior Projects</a>
 				<div class="dropdown-content">
@@ -29,16 +29,12 @@
 					<a href="https://prinlim.github.io/Photo-Gallery/" target="_blank">Photo Gallery</a>
 					<a href="https://tangible-trusted-tornado.glitch.me/index.html" target="_blank">Access Advocates</a>
 				</div>
-				</li>
+			</li>
 			<li><a href="https://31ea79dc-bfde-4f89-878f-51f4ec3bfe6f-00-2bwxqhbgfwn4z.riker.replit.dev/" target="_blank">Junior Porfolio</a></li>
 		</ul>
 </div>
-	<div class="poke">
-		<h1 class=>Hi, welcome to my page!</h1>
-		<img class="non" src="me.JPG">
-		<h1>I'm Princess Lim, high school web-developer!</h1>
-		<h3>~Check out my stuff in the navigation bar above~</h3>
-		
+	<div class="mits">
+		<a href="https://docs.google.com/document/d/1LLwahsND02Eq8cvTe8F5yu_bR2BDa-MiXet3x9otoQg/edit?usp=sharing" target="_blank"><img class="bird" src="AOI.png"></a>
 	</div>
 </body>
 
