--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 			<li ><a href="index.html">Home</a></li>
 		
 			<li><a href="#">About Me</a> </li>
-			<li><a href="https://docs.google.com/document/d/1LLwahsND02Eq8cvTe8F5yu_bR2BDa-MiXet3x9otoQg/edit?usp=sharing" target="_blank">Resume</a></li>
+			<li><a href="resumes.html">Resume</a></li>
 				
 		<li class="dropdown">
 		<a href="projects.html" class="dropbtn open">Senior Projects</a>
