--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 	<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Yarndings+12+Charted&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -34,7 +36,7 @@
 		</ul>
 </div>
 	<div class="poke">
-		<h1 class=>Hi, welcome to my page!</h1>
+		<h1 class="cat">Hi, welcome to my page!</h1>
 		<img class="non" src="me.JPG">
 		<h1>I'm Princess Lim, high school web-developer!</h1>
 		<h3>~Check out my stuff in the navigation bar above~</h3>
