--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
   <title>Github Port</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 	<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Yarndings+12+Charted&display=swap" rel="stylesheet">
 </head>
 
 <body> 
@@ -45,7 +46,7 @@
 				<figcaption><a href="https://prinlim.github.io/Hire-Me-Project-1" target="_blank">Peer Hire Me!: Jafnun Lisa</a></figcaption>
 				<a href="https://prinlim.github.io/Hire-Me-Project-1" target="_blank"><img class="parry" src="hires.png"></a>
 				
-				<p> Summary</p>
+				<p> As young adults, we were tasked with helping our peers by making a website for future, potential employers. I had interviewed my fellow classmate, Jafnun Lisa and applied her information onto the page. I included her goals, educational bakground, and personal information. My particular difficulties with this project was adjusting the image gallery for the education section, yet for strengths, I believe there is visual appeal in color scheme and font to the website.   </p>
 
 		</div>
 
@@ -54,7 +55,7 @@
 			<a href="https://prinlim.github.io/J-Query_Adventure_Game/" target="_blank"><img class="parry" src="game.png"></a>
 				
 
-				<p> Summary</p>
+				<p> Advancing into javascript, we were tasked to apply the jQuery library with this project. Among the criteria, we were required to add multiple functions, such as dlbclick or hover to ensure a interactive game for users to play. I was able to implement these features successfully and if I had more time, I would have added more endings or "scenes" to make it more enticing. </p>
 
 		</div>
 		<div class="cols">
