--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
 			<figcaption><a href="https://prinlim.github.io/Unit-4-Project-Social-Media-Page-PRINCESS-ALECK1/" target="blank">Fanpage Website: Megamind</a></figcaption>
 			<a href="https://prinlim.github.io/Unit-4-Project-Social-Media-Page-PRINCESS-ALECK1/" target="blank"><img class="parry" src="mega.png"></a>
 				
-				<p> Summary</p>
+				<p> A social-media page starring someone you admire or respect, including fictional, had been the prompt for this project. I had chosen Megamind and created a wireframe inspired from MySpace formatting, ultimately creating a website that highlighted quotes, friends, achievenments, and overall personality. Difficulties encountered were grouping together different divs and the scroll feature on the posts.  </p>
 
 		</div>
 
@@ -70,7 +70,7 @@
 			<figcaption><a href="https://prinlim.github.io/Character-Quiz-PRINCESS-ALECK1/" target="_blank">Character Quiz: Minions</a></figcaption>
 			<a href="https://prinlim.github.io/Character-Quiz-PRINCESS-ALECK1/" target="_blank"><img class="parry" src="mins.png"></a>
 				
-				<p> Summary</p>
+				<p> Diving further into javascript, we needed implemented if-else statements in order to create a functioning character quiz. The user would input string values and an integer when asked, where specific inputs would output different Minion characters. It was at first difficult to integrate conditionals since I had no idea how to first, but I eventually figured it out. It was tedious but I had successfully made an effective quiz. </p>
 
 		</div>
 
@@ -79,7 +79,7 @@
 			<figcaption><a href="https://prinlim.github.io/Photo-Gallery/" target="_blank">Photo Gallery: Aquarium</a></figcaption>
 			<a href="https://prinlim.github.io/Photo-Gallery/" target="_blank"><img class="parry" src="anim.png"></a>
 			
-				<p> Summary</p>
+				<p> Progressing onto arrays, we were tasked to create a photo gallery that includes the user's input of their own image and caption of The append function was predominatnly used and I found it hard to connect the add and remove buttons to the list. But with thorough collaboration, I had sucessfully made a functional photo gallery and I am proud of the final result, especially the CSS. </p>
 		</div>
 
 		<div class="cols">
