--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
 </div>
 	<div class="poke">
 		<h1 class="cat">Hi, welcome to my page!</h1>
+		<div class="mio">
+			<h1>I'm Princess Lim, high school web-developer!</h1>
 		<img class="non" src="me.JPG">
-		<h1>I'm Princess Lim, high school web-developer!</h1>
-		<h3>~Check out my stuff in the navigation bar above~</h3>
+		
+		
+			</div>
+		<h3 class="cat">~Check out my stuff in the navigation bar above~</h3>
 		
 	</div>
 </body>
