--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
 			<figcaption><a href="https://prinlim.github.io/Photo-Gallery/" target="_blank">Photo Gallery: Aquarium</a></figcaption>
 			<a href="https://prinlim.github.io/Photo-Gallery/" target="_blank"><img class="parry" src="anim.png"></a>
 			
-				<p> Progressing onto arrays, we were tasked to create a photo gallery that includes the user's input of their own image and caption of The append function was predominatnly used and I found it hard to connect the add and remove buttons to the list. But with thorough collaboration, I had sucessfully made a functional photo gallery and I am proud of the final result, especially the CSS. </p>
+				<p> Progressing onto arrays, we were tasked to create a photo gallery that includes the option for the user to input of their own image and caption of a chosen sea creature. The append function was predominatnly used and I found it hard to connect the add and remove buttons to the list. But with thorough collaboration, I had sucessfully made a functional photo gallery and I am proud of the final result, especially the CSS. </p>
 		</div>
 
 		<div class="cols">
